--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Whatsapp link</title>
+  <script src="https://cdn.usefathom.com/script.js" data-site="KMHDNYSC" defer></script>
   <style>
     body { font-family: Arial, sans-serif; }
     button { background-color: #007bff; color: white; border: none; border-radius: 5px; padding: 10px 20px; cursor: pointer; }
