--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <div class="container">
     <h2>Whatsapp link generator</h2>
     <br/>
-    <input id="phoneInput" type="tel" class="input-box" required >
+    <input id="phoneInput" type="tel" required autofocus >
     <a id="goLink" href="#" class="hidden" >Open</a>
 
     <ul id="phoneList" ></ul>
