--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Whatsapp link</title>
+  <title>Fast Whatsapp link</title>
   <script src="https://cdn.usefathom.com/script.js" data-site="KMHDNYSC" defer></script>
   <style>
     body {
@@ -74,7 +74,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Whatsapp link generator</h2>
+    <h2>Fast Whatsapp link builder</h2>
     <input id="phoneInput" type="tel" required autofocus size="15" placeholder="Phone number">
     <a id="goLink" href="#" class="hidden" >Open</a>
 
